Fixed text issue on mobile

--- a/shared/styles/layout/postsDashBoard/_PostContainer.scss
+++ b/shared/styles/layout/postsDashBoard/_PostContainer.scss
@@ -13,6 +13,5 @@
 
   & .card.post {
     width: 70%;
-    height: 80%;
   }
 }
